ProTrekkr releases history
===============================================================================

v2.8.0 PRE 2

- Changed the behaviour of the single step mode, plays only stops when
  enter (or return) key is depressed and only the current pattern is played
  (press Left Shift to go into song mode).
- Added a function to transpose a range of instruments.

v2.8.0 PRE 1

- Sample "Maximize" (Max) is now called "Normalize" (Norm) in samples editor.
- More visual feedback for currently played sample in samples editor.
- Added the option to show/clear leading zeroes digits in patterns.
- Added patterns sliders edition mode (check manual for explanations).
  Note: This mode can be quite CPU intensive.
- Fixed various bugs in patterns edition.
- Channels VU meters were drawn way to many times over each others, fixed.
- Fixed the audio levels of the channels VU meters.
- Modified the reverb (should sound better (?)) also added a damp parameter
  (had to rework some modules due to this).
- Added effect 2C: Set reverb damp ratio.
- Improved the volume ramping.
- Added LCTRL + LALT + HOME / END keyboard shortcuts (jump to top/first track
  or bottom/last track of a pattern).
- Added Enter or Return keys for single step play.
- Fixed channels multi polyphony allocations.
- Fixed the fullscreen mode switching under AROS.
- Added an OpenGL executable in AROS distribution (ptk_aros_ogl)
  for some reason i don't explain it may be slower than the regular one, 
  your mileage may vary.

v2.7.6

- Fixed keyboard handling on Mac OS.

v2.7.5

- Sample editor tries to keep loop information intact whenever possible.
- Synth distortion can now have positive or negative values.
- Synth ENV 1 & 2 can be directed to drive synth distortion.
- Synth LVO 1 & 2 can be directed to drive synth distortion as well.
- Removed broken instruments and presets from distribution.
- Fixed a couple of bugs here and there.
- Added replay routine support for AROS.